--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>hello</h1>
     <p>Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p><a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.pinimg.com%2F736x%2F73%2F05%2F96%2F7305965d2ff9e45c68df236e7dea1c67.jpg&imgrefurl=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F332492384990158741%2F&tbnid=ZIR8OUJITnIVhM&vet=12ahUKEwjEgvflnKDsAhXjm-YKHU6NCusQMyhAegQIARBs..i&docid=4zAgbGyceFLWkM&w=720&h=1280&q=nct%20logo&ved=2ahUKEwjEgvflnKDsAhXjm-YKHU6NCusQMyhAegQIARBs"></a></p>
+    <p><img src="nct.jpg" alt="nct"></p>
     
 </body>
 </html>
