--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>hello</h1>
     <p>Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p><img src="nct.jpg" alt="nct"></p>
+    <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS3IckSsXGU2IBMz5M3jGpp6IL9FrUj6X31vQ&usqp=CAU" alt="nct"></p>
     
 </body>
 </html>
