--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>s w a h a a</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="./script.js"></script>
 </head>
 <body>
-    <h1>hello</h1>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS3IckSsXGU2IBMz5M3jGpp6IL9FrUj6X31vQ&usqp=CAU" alt="nct"></p>
-    
+    <nav class="navbar fixed-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">s w a h a a</a>
+      </nav>
+      <section id="intro"></section>
+       <img src="https://web.whatsapp.com/pp?e=https%3A%2F%2Fpps.whatsapp.net%2Fv%2Ft61.24694-24%2F116192306_173566520875933_2848198378072948996_n.jpg%3Foh%3Df935f8dd2e519db8f4fcb4c1df209001%26oe%3D5F85B9C6&t=l&u=919940290618%40c.us&i=1595696312&n=77jCljQrLvpkiHuOof68Lx1myV0RrCx6dyZIrB5fGcM%3D" alt="me">
+
 </body>
 </html>
