--- a/index.html
+++ b/index.html
@@ -10,14 +10,57 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <nav class="navbar fixed-top navbar-dark bg-dark">
         <a class="navbar-brand" href="#">s w a h a a</a>
-      </nav>
-      <section id="intro"></section>
-       <img src="https://web.whatsapp.com/pp?e=https%3A%2F%2Fpps.whatsapp.net%2Fv%2Ft61.24694-24%2F116192306_173566520875933_2848198378072948996_n.jpg%3Foh%3Df935f8dd2e519db8f4fcb4c1df209001%26oe%3D5F85B9C6&t=l&u=919940290618%40c.us&i=1595696312&n=77jCljQrLvpkiHuOof68Lx1myV0RrCx6dyZIrB5fGcM%3D" alt="me">
+    </nav>
+    <section id="intro">
+        <img src="https://i.imgur.com/COtSoAk.jpg" class="img-fluid" alt="Responsive image">
+        <div class="content">
+            <h3>Hello I am</h3>
+            <h1>Swaathy Kumar</h1>
+            <h2>I am a <span>Artist</span></h2>
+        </div>
+    </section>
+    <section id="about">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <h2>About Me</h2>
+                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
+                          Quas, officia. Reprehenderit eveniet obcaecati deleniti tempora.
+                          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
+                          Quas, officia. Reprehenderit eveniet obcaecati deleniti temporaLorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
+                          Quas, officia. Reprehenderit eveniet obcaecati deleniti tempora</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="education">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <h2>experience</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni tempora, tenetur esse vel aliquam consequuntur 
+                        ex fugiat quod necessitatibus ab molestiae natus nihil quos veritatis hic nam cumque, dolorum ut.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
+                        Quas, officia. Reprehenderit eveniet obcaecati deleniti temporaLorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
+                        Quas, officia. Reprehenderit eveniet obcaecati deleniti tempora</p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <h2>projects</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni tempora, tenetur esse vel aliquam consequuntur 
+                        ex fugiat quod necessitatibus ab molestiae natus nihil quos veritatis hic nam cumque, dolorum ut.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
+                        Quas, officia. Reprehenderit eveniet obcaecati deleniti temporaLorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
+                        Quas, officia. Reprehenderit eveniet obcaecati deleniti tempora</p>
+                </div>
+            </div>
+        </div>
+    </section> 
+       
 
 </body>
 </html>
