--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">s w a h a a</a>
+        <a class="navbar-brand" href="#" >s w a h a a</a>
     </nav>
     <section id="intro">
         <img src="https://i.imgur.com/COtSoAk.jpg" class="img-fluid" alt="Responsive image">
@@ -22,6 +22,15 @@
             <h3>Hello I am</h3>
             <h1>Swaathy Kumar</h1>
             <h2>I am a <span>Artist</span></h2>
+            <div class="socials">
+                <a target="_blank" href=""><i class="fa fa-facebook"></i></a>
+                <a target="_blank" href=""><i class="fa fa-twitter"></i></a>
+                <a target="_blank" href=""><i class="fa fa-linkedin"></i></a>
+                <a target="_blank" href=""><i class="fa fa-stack-overflow"></i></a>
+                <a target="_blank" href=""><i class="fa fa-stack-exchange"></i></a>
+                <a target="_blank" href=""><i class="fa fa-github"></i></a>
+                <a target="_blank" href=""><i class="fa fa-gitlab"></i></a>
+            </div>
         </div>
     </section>
     <section id="about">
