--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="content">
             <h3>Hello I am</h3>
             <h1>Swaathy Kumar</h1>
-            <h2>I am a <span>Artist</span></h2>
+            <h2>I am a <span>who?</span></h2>
             <div class="socials">
-                <a target="_blank" href=""><i class="fa fa-facebook"></i></a>
+                <a target="_blank" href="https://www.instagram.com/"><i class="fa fa-facebook"></i></a>
                 <a target="_blank" href=""><i class="fa fa-twitter"></i></a>
                 <a target="_blank" href=""><i class="fa fa-linkedin"></i></a>
                 <a target="_blank" href=""><i class="fa fa-stack-overflow"></i></a>
