--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="https://i.imgur.com/COtSoAk.jpg" class="img-fluid" alt="Responsive image">
         <div class="content">
             <h3>Hello I am</h3>
-            <h1>Swaathy Kumar</h1>
+            <h1>Swaathy</h1>
             <h2>I am a <span>who?</span></h2>
             <div class="socials">
                 <a target="_blank" href="https://www.instagram.com/"><i class="fa fa-facebook"></i></a>
