--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="content">
             <h3>Hello I am</h3>
             <h1>Swaathy</h1>
-            <h2>I am a <span>who?</span></h2>
+            <h2>I am a <span>Artist</span></h2>
             <div class="socials">
                 <a target="_blank" href="https://www.instagram.com/"><i class="fa fa-facebook"></i></a>
                 <a target="_blank" href=""><i class="fa fa-twitter"></i></a>
@@ -51,7 +51,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <h2>experience</h2>
+                    <h2>Experience</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni tempora, tenetur esse vel aliquam consequuntur 
                         ex fugiat quod necessitatibus ab molestiae natus nihil quos veritatis hic nam cumque, dolorum ut.
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
@@ -59,7 +59,7 @@
                         Quas, officia. Reprehenderit eveniet obcaecati deleniti tempora</p>
                 </div>
                 <div class="col-12 col-md-6">
-                    <h2>projects</h2>
+                    <h2>Projects</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni tempora, tenetur esse vel aliquam consequuntur 
                         ex fugiat quod necessitatibus ab molestiae natus nihil quos veritatis hic nam cumque, dolorum ut.
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
