--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </head>
 <body>
     <nav class="navbar fixed-top navbar-dark bg-dark">
@@ -21,7 +21,7 @@
         <div class="content">
             <h3>Hello I am</h3>
             <h1>Swaathy</h1>
-            <h2>I am a <span>Artist</span></h2>
+            <h2>I am a <span></span></h2>
             <div class="socials">
                 <a target="_blank" href="https://www.instagram.com/"><i class="fa fa-facebook"></i></a>
                 <a target="_blank" href=""><i class="fa fa-twitter"></i></a>
