--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="content">
             <h3>Hello I am</h3>
             <h1>Swaathy</h1>
-            <h2>I am a <span></span></h2>
+            <h2>I am  <span></span></h2>
             <div class="socials">
                 <a target="_blank" href="https://www.instagram.com/"><i class="fa fa-facebook"></i></a>
                 <a target="_blank" href=""><i class="fa fa-twitter"></i></a>
@@ -67,6 +67,48 @@
                         Quas, officia. Reprehenderit eveniet obcaecati deleniti temporaLorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
                         Quas, officia. Reprehenderit eveniet obcaecati deleniti tempora</p>
                 </div>
+            </div>
+            <div class="row">
+            <div class="col-12 col-md-6">
+                <h2>Contacting Me</h2>
+                <p>Feel free to talk to me about anything!
+                    orem ipsum dolor sit, amet consectetur adipisicing elit. Magni tempora, tenetur esse vel aliquam consequuntur 
+                        ex fugiat quod necessitatibus ab molestiae natus nihil quos veritatis hic nam cumque, dolorum ut.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
+                        Quas, officia. Reprehenderit eveniet obcaecati deleniti temporaLorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit quis dolor fuga totam magni alias culpa? Similique ex accusamus tempore earum magni.
+                        Quas, officia. Reprehenderit eveniet obcaecati deleniti tempora</p>
+            </div>
+            <div class="col-12 col-md-6">
+                <h2>Say Hi to me</h2>
+                <p>Please write me a nice message and I'll reply ASAP!!</p>
+                <img src="https://media3.giphy.com/media/bcKmIWkUMCjVm/200.webp?cid=ecf05e47mulb5fa17a5w3n3fbct12zm3huzo79kk0771wr3l&rid=200.webp" alt="hugs" style="float:right; width:80px; height:80px; "></h2>
+                <form>
+                 
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="form-group">
+                                <input type="text" name="Name" placeholder="What's your name?" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                <input type="email" name="Email" placeholder="Give me your email..." class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="form-group">
+                                <input type="text" name="Subject" placeholder="What's it about?" class="form-control">
+                            </div>
+                        <div class="form-group">
+                            <textarea name="Message" placeholder="Tell me about it in detail..." class="form-control"></textarea>  
+                        </div>
+                        <button type="submit" class="btn btn-success">Send</button>
+                    </div>
+                </form>
+            </div>   
             </div>
         </div>
     </section> 
