--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <nav class="navbar fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="#" >s w a h a a</a>
+        <a class="navbar-brand" href="index.html" >s w a h a a</a>
     </nav>
     <section id="intro">
         
