--- a/slides.htm
+++ b/slides.htm
@@ -29,8 +29,11 @@
 </head>
 <body>
     <nav class="navbar fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="#" >s w a h a a</a>
+        <a class="navbar-brand" href="index.html" >s w a h a a</a>
     </nav>
+
+
+    
     <section>
         <div class="card">
             <h2>Slide Show</h2>
@@ -38,14 +41,16 @@
         </div>
         <div class="slide-container">
             <div class="slides">
-                <div class="slides"><img src="https://i.imgur.com/COtSoAk.jpg" alt=""></div>
-                <div class="slides"><img src="https://i.imgur.com/COtSoAk.jpg" alt=""></div>
-                <div class="slides"><img src="https://i.imgur.com/COtSoAk.jpg" alt=""></div>
-                <div class="slides"><img src="https://i.imgur.com/COtSoAk.jpg" alt=""></div>
-                <div class="slides"><img src="https://i.imgur.com/COtSoAk.jpg" alt=""></div>
+                <div class="slide hidden"><img src="https://i.imgur.com/Usfr5Kr.jpg" alt="water melon"></div>
+                <div class="slide hidden"><img src="https://i.imgur.com/4TPxOB6.jpg" alt="pin wheel"></div>
+                <div class="slide hidden"><img src="https://i.imgur.com/kTkBZBF.jpg" alt="pomegranate"></div>
+                <div class="slide hidden"><img src="https://i.imgur.com/V53Mt4f.jpg" alt="deer"></div>
+                <div class="slide hidden"><img src="https://i.imgur.com/GrwehWS.jpg" alt="tea pot"></div>
+                <div class="slide hidden"><img src="https://i.imgur.com/afoOU7E.jpg" alt="shoes"></div>
             </div>
             <ul class="pager"></ul>
         </div>
     </section>
+    
 </body>
 </html>
