--- a/slides.htm
+++ b/slides.htm
@@ -54,8 +54,8 @@
     
     <section>
         <div class="card">
-            <h2>Slide Show</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis ipsum velit dolor dignissimos beatae quod quisquam, impedit, officiis voluptate nihil corrupti temporibus laborum adipisci sint tempora culpa libero cupiditate minus.</p>
+            <h2>My Work</h2>
+            <p>Here's some of my best works! :D</p>
         </div>
         <div class="slide-container">
             <div class="slides">
