--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="row">
                 <div class="col-12 ">
                     <h2 id="mywork"> My Work</h2>
-                    <a href="slides.htm" target="_blank" > <img src="https://media4.giphy.com/media/RHCo43fQftavKfQJaN/giphy.webp?cid=ecf05e471639417475fba733b23321b8bf0dd33a3914a566&rid=giphy.webp" alt="bts" class="center" height="200px" width="180px" > </a> 
+                    <a href="slides.htm" target="_blank" > <img src="https://media4.giphy.com/media/RHCo43fQftavKfQJaN/giphy.webp?cid=ecf05e471639417475fba733b23321b8bf0dd33a3914a566&rid=giphy.webp" alt="click here" class="center" height="200px" width="180px" > </a> 
                 </div>
             </div>
         </div>
