--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h2>About Me</h2>
                      <p>
                          <br>
-                        1st Year CSE Student At VIT, Chennai.
+                        2nd Year CSE Student At VIT, Chennai.
                         <br>
                         An enthusiastic and curious student who wants to learn a bit of everything. <br> Hard Worker. 
                      </p>
